css and html files modified

--- a/playpart.html
+++ b/playpart.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="ibsen.css">
         <title>PlayPartDemo</title>
     </head>
     <body>
         <h1>Krishna Sri Rachamanti acts in a play</h1>
         <h2>Ghosts Act 1 -Henrik Ibsen</h2>
         
-            <h5>These are the words of Engstrand</h5>
-            <p>ENGSTRAND. It's the Lord's own rain, my girl.</p>
+            <H5>These are the words of Engstrand</H5>
+            <P class="ENGSTRAND">ENGSTRAND. </P><p class="speech">It's the Lord's own rain, my girl.</p>
             <h5>These are the words of Regina</h5>
-            <p>REGINA. It's the devil's rain, _I_ say.</p>
+            <P class="REGINA">REGINA. </P><p class="speech">It's the devil's rain, _I_ say.</p>
             <h5>These are the words of Engstrand</h5>
-            <p>ENGSTRAND. Lord, how you talk, Regina. <p>[Limps a step or two forward into
+            <P class="ENGSTRAND">ENGSTRAND. </P><p class="speech">Lord, how you talk, Regina. <p class="direction">[Limps a step or two forward into
             the room.]</p> It's just this as I wanted to say--</p>
             <h5>These are the words of Regina</h5>
-            <p>REGINA. Don't clatter so with that foot of yours, I tell you! The young
+            <P class="REGINA">REGINA. </P><p class="speech">Don't clatter so with that foot of yours, I tell you! The young
             master's asleep upstairs.</p>
             <h5>These are the words of Engstrand</h5>
-            <p>ENGSTRAND. Asleep? In the middle of the day?</p>
+            <P class="ENGSTRAND">ENGSTRAND. </P><p class="speech">Asleep? In the middle of the day?</p>
             <h5>These are the words of Regina</h5>
-            <p>REGINA. It's no business of yours.</p>
+            <P class="REGINA">REGINA. </P><p class="speech">It's no business of yours.</p>
             <h5>These are the words of Engstrand</h5>
-            <p>ENGSTRAND. I was out on the loose last night--</p>
+            <P class="ENGSTRAND">ENGSTRAND. </P><p class="speech">I was out on the loose last night--</p>
 
        
     </body>
