--- a/playpart.html
+++ b/playpart.html
@@ -24,7 +24,33 @@
             <P class="REGINA">REGINA. </P><p class="speech">It's no business of yours.</p>
             <h5>These are the words of Engstrand</h5>
             <P class="ENGSTRAND">ENGSTRAND. </P><p class="speech">I was out on the loose last night--</p>
-
+            <table>
+                <tr>
+                    <th>Character</th>
+                    <th>Actor</th>
+                    <th>Understudy</th>
+                </tr>
+                <tr>
+                    <td>ENGSTRAND</td>
+                    <td>Surya</td>
+                    <td>Main</td>
+                </tr>
+                <tr>
+                    <td>ENGSTRAND</td>
+                    <td>Arjun</td>
+                    <td>Backup</td>
+                </tr>
+                <tr>
+                    <td>REGINA</td>
+                    <td>Kajal</td>
+                    <td>Main</td>
+                </tr>
+                <tr>
+                    <td>REGINA</td>
+                    <td>Samantha</td>
+                    <td>Backup</td>
+                </tr>
+            </table>
        
     </body>
 </html>
