--- a/playpart.html
+++ b/playpart.html
@@ -51,6 +51,8 @@
                     <td>Backup</td>
                 </tr>
             </table>
+       <p>There you go with the link to second act</p>
+       <a href="secondact.html" >SecondAct</a>
        
     </body>
 </html>
