Added bonus and img file

--- a/playpart.html
+++ b/playpart.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="ibsen.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>PlayPartDemo</title>
     </head>
     <body>
@@ -53,6 +54,14 @@
             </table>
        <p>There you go with the link to second act</p>
        <a href="secondact.html" >SecondAct</a>
-       
+       <h2>BONUS</h2>
+       <i class="fa fa-home" style="font-size: 50px; "></i>
+       <i class="fa fa-trash" style="font-size: 50px; "></i>
+       <br>
+        <img src="OIP.jpg" alt="Image">
+        <ul class="navbar-horizontal">
+            <li><a href="playpart.html">PlayPart</a></li>
+            <li><a href="secondact.html">Secondact</a></li>
+        </ul>
     </body>
 </html>
