--- a/secondact.html
+++ b/secondact.html
@@ -15,6 +15,33 @@
         <H5>These are the words of REGINA</H5>
         <p class="REGINA">REGINA.</p> <p class="speech">So it seems.</p>
 
+        <table>
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Understudy</th>
+            </tr>
+            <tr>
+                <td>ENGSTRAND</td>
+                <td>Surya</td>
+                <td>Main</td>
+            </tr>
+            <tr>
+                <td>ENGSTRAND</td>
+                <td>Arjun</td>
+                <td>Backup</td>
+            </tr>
+            <tr>
+                <td>REGINA</td>
+                <td>Kajal</td>
+                <td>Main</td>
+            </tr>
+            <tr>
+                <td>REGINA</td>
+                <td>Samantha</td>
+                <td>Backup</td>
+            </tr>
+        </table>
         <p>Here you go with the link to playpart</p>
         <a href="playpart.html">PlayPart</a>
     </body>
